[project]
name = "getting-started-notebook"
version = "3.3.0"
description = "A Getting Started notebook to jumpstart your Graph with WordLift"
authors = [
    { name = "David Riccitelli", email = "david@wordlift.io" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "notebook (>=7.3.2,<8.0.0)",
    "wordlift-client (>=1.75.0,<2.0.0)",
    "wordlift-sdk @ git+https://github.com/wordlift/python-sdk.git",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "rdflib (>=7.1.3,<8.0.0)",
    "tenacity (>=9.0.0,<10.0.0)",
    "jupyterlab (>=4.3.6,<5.0.0)",
    "pycountry (>=24.6.1,<25.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
nbstripout = "^0.8.1"
ruff = "^0.11.5"
pre-commit = "^4.2.0"

[tool.ruff.format]
docstring-code-format = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

